[gd_scene load_steps=23 format=2]

[ext_resource path="res://images/ui/paused.png" type="Texture" id=1]
[ext_resource path="res://images/dialog_sprite/dia_a2.png" type="Texture" id=2]
[ext_resource path="res://images/dialog_sprite/yoshiko_a2.png" type="Texture" id=3]
[ext_resource path="res://components/fps.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/ui/cursor/cursor_inside.png" type="Texture" id=5]
[ext_resource path="res://images/ui/cursor/cursor_outside.png" type="Texture" id=6]
[ext_resource path="res://audio/sfx/confirmation_001.ogg" type="AudioStream" id=7]
[ext_resource path="res://components/event_processor.tscn" type="PackedScene" id=8]
[ext_resource path="res://components/rect_stripe.tscn" type="PackedScene" id=9]
[ext_resource path="res://shaders/hue_shift.shader" type="Shader" id=10]
[ext_resource path="res://scripts/cursor_diamond.gd" type="Script" id=11]
[ext_resource path="res://scripts/pause.gd" type="Script" id=12]
[ext_resource path="res://models/kenney_city/skyscraperE.glb" type="PackedScene" id=13]
[ext_resource path="res://models/kenney_city/large_buildingA.glb" type="PackedScene" id=14]

[sub_resource type="GDScript" id=1]
script/source = "extends \"res://scripts/base_scene.gd\"

const events = preload(\"res://scripts/events/test_clubroom.gd\")
onready var events_instance = events.new()

func _ready():
	self.enable_cursor()

func _on_3dArea_click(camera, event, click_position, click_normal, shape_idx, event_id):
	if (!self.get_cursor_status()): return
	
	if event is InputEventMouseButton:
		if (event.button_index == BUTTON_LEFT and event.pressed):
			if (self.check_event_processor_active()): return false
			match event_id:
				\"dia1\":
					$\"3D/FPS\".disallow_move()
					$EventProcessor.connect(\"sequence_finished\", self, \"_release_movement_lock\", [], CONNECT_ONESHOT)
					$EventProcessor.set_sequence(events_instance.dia1())
					$EventProcessor.start()
				\"yoshiko1\":
					$\"3D/FPS\".disallow_move()
					$\"CursorLayer\".disable()
					Player.party_members = {
						'kh': preload(\"res://data/party_units/kaput_hunter/kaput_hunter.gd\").new(),
						'pk': preload(\"res://data/party_units/paul_kirigaya/paul_kirigaya.gd\").new(),
						'rk': preload(\"res://data/party_units/rifkaizer/rifkaizer.gd\").new(),
						'tb': preload(\"res://data/party_units/the_bonk/the_bonk.gd\").new(),
					}
					if Player.active_party_members.size() < 4: Player.active_party_members.append(Player.party_members['pk'])
					if Player.active_party_members.size() < 4: Player.active_party_members.append(Player.party_members['kh'])
					if Player.active_party_members.size() < 4: Player.active_party_members.append(Player.party_members['rk'])
					if Player.active_party_members.size() < 4: Player.active_party_members.append(Player.party_members['tb'])
					var enemies = preload(\"res://data/enemy_clusters/si_kompret_lonesome.tscn\")
					var battle_scene = preload(\"res://scenes/BattleScene.tscn\").instance()
					get_tree().root.add_child(battle_scene)
					battle_scene.init(enemies)
					battle_scene.connect(\"battle_end\", self, \"_on_battle_end\")
					$\"3D\".visible = false

func _on_battle_end(battle_scene: Node, result: Dictionary):
	yield(get_tree().create_timer(3), \"timeout\")
	battle_scene.queue_free()
	$\"3D\".visible = true
	$\"3D/FPS\".allow_move()

func _release_movement_lock():
	$\"3D/FPS\".allow_move()
"

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 10 )
shader_param/shift_amount = null

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 10 )
shader_param/shift_amount = null

[sub_resource type="GDScript" id=6]
script/source = "extends CanvasLayer

var active_text: String
var rect_stripe_active: bool = false
onready var stripe = $RectStripe
onready var microtimer = $Microtimer

func _is_event_processor_active(): return self.get_parent().check_event_processor_active()

func _process(_delta):
	if (self._is_event_processor_active() && self.rect_stripe_active && self.active_text):
		self.temp_hide_rect_stripe()
	elif (!self._is_event_processor_active() && !self.rect_stripe_active && self.active_text):
		self.reshow_rect_stripe()

func temp_hide_rect_stripe():
	self.rect_stripe_active = false
	self.stripe.hide_rect_stripe()

func reshow_rect_stripe():
	self.rect_stripe_active = true
	self._on_CursorLayer_show_info_text(self.active_text)

func _on_CursorLayer_show_info_text(text):
	# calculate rect size by simulating it on a dummy node
	if (text != self.stripe.rect_calculator.text):
		self.stripe.rect_calculator.text = \"\"
		self.stripe.rect_calculator.rect_size = Vector2(0, self.stripe.rect_calculator.rect_size.y)
		self.stripe.rect_calculator.text = text
		self.stripe.rect_calculator.visible_characters = -1
		self.microtimer.start(); yield(self.microtimer, \"timeout\")
	
	self.active_text = text
	var length: int = 110 + int(self.stripe.rect_calculator.rect_size.x)
	
	# return if event processor is active
	if self._is_event_processor_active(): return
	# else, animate showing
	self.stripe.show_rect_stripe(length, text)
	self.rect_stripe_active = true

func _on_CursorLayer_hide_info_text(text = \"\"):
	self.microtimer.start(); yield(self.microtimer, \"timeout\")
	self.active_text = \"\"
	self.stripe.hide_rect_stripe()
	self.rect_stripe_active = false
"

[sub_resource type="CylinderShape" id=8]
radius = 0.5

[sub_resource type="CylinderShape" id=7]
radius = 0.5

[sub_resource type="CubeMesh" id=9]
size = Vector3( 80, 2, 80 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 40, 1, 40 )

[node name="Scene1" type="Node"]
script = SubResource( 1 )

[node name="PausedUILayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PausedIndicator" type="TextureRect" parent="PausedUILayer"]
pause_mode = 2
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseTween" type="Tween" parent="PausedUILayer/PausedIndicator"]

[node name="EventProcessor" parent="." instance=ExtResource( 8 )]

[node name="CursorLayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 90
script = ExtResource( 11 )

[node name="CursorSprite" type="Node2D" parent="CursorLayer"]
modulate = Color( 1, 1, 1, 0.843137 )
position = Vector2( -512, -512 )
z_index = 200
z_as_relative = false
__meta__ = {
"_edit_group_": true
}

[node name="CursorSpriteOutside" type="Sprite" parent="CursorLayer/CursorSprite"]
material = SubResource( 4 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 6 )

[node name="CursorSpriteInside" type="Sprite" parent="CursorLayer/CursorSprite"]
material = SubResource( 5 )
scale = Vector2( 0.105, 0.105 )
texture = ExtResource( 5 )

[node name="InfoLayer" type="CanvasLayer" parent="."]
layer = 80
script = SubResource( 6 )

[node name="Microtimer" type="Timer" parent="InfoLayer"]
wait_time = 0.1
one_shot = true

[node name="RectStripe" parent="InfoLayer" instance=ExtResource( 9 )]

[node name="BaseCamera" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
rotating = true
current = true

[node name="3D" type="Spatial" parent="."]

[node name="FPS" parent="3D" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.52541, 4.15905 )

[node name="Dia3D" type="Sprite3D" parent="3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.741363, 0 )
pixel_size = 0.0015
billboard = 2
texture = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="3D/Dia3D"]

[node name="CollisionShape" type="CollisionShape" parent="3D/Dia3D/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1.2, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 8 )

[node name="Yoshiko3D" type="Sprite3D" parent="3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.88397, 0.709594, 0 )
pixel_size = 0.0015
billboard = 2
texture = ExtResource( 3 )

[node name="StaticBody" type="StaticBody" parent="3D/Yoshiko3D"]

[node name="CollisionShape" type="CollisionShape" parent="3D/Yoshiko3D/StaticBody"]
shape = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.60552, 0 )

[node name="MeshInstance" type="MeshInstance" parent="3D/StaticBody"]
mesh = SubResource( 9 )
skeleton = NodePath("../..")
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="3D/StaticBody"]
shape = SubResource( 10 )

[node name="large_buildingA" parent="3D" instance=ExtResource( 14 )]
transform = Transform( 5.05719, 0, 0, 0, 5.05719, 0, 0, 0, 5.46585, 0.28323, -0.605474, -5.98995 )

[node name="skyscraperE" parent="3D/large_buildingA" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.93682, -2.73436e-06, 0.79596 )

[node name="Audio" type="Node" parent="."]

[node name="Confirm" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 7 )
bus = "UI"

[connection signal="tween_all_completed" from="PausedUILayer/PausedIndicator/PauseTween" to="PausedUILayer/PausedIndicator" method="_on_tween_all_completed"]
[connection signal="hover_off" from="EventProcessor" to="CursorLayer" method="_off_hover"]
[connection signal="hover_on" from="EventProcessor" to="CursorLayer" method="_on_hover"]
[connection signal="hide_info_text" from="CursorLayer" to="InfoLayer" method="_on_CursorLayer_hide_info_text"]
[connection signal="show_info_text" from="CursorLayer" to="InfoLayer" method="_on_CursorLayer_show_info_text"]
[connection signal="input_event" from="3D/Dia3D/StaticBody" to="." method="_on_3dArea_click" binds= [ "dia1" ]]
[connection signal="mouse_entered" from="3D/Dia3D/StaticBody" to="CursorLayer" method="_on_hover" binds= [ "dia1", "Dia Kurosawa" ]]
[connection signal="mouse_exited" from="3D/Dia3D/StaticBody" to="CursorLayer" method="_off_hover" binds= [ "dia1", "Dia Kurosawa" ]]
[connection signal="input_event" from="3D/Yoshiko3D/StaticBody" to="." method="_on_3dArea_click" binds= [ "yoshiko1" ]]
[connection signal="mouse_entered" from="3D/Yoshiko3D/StaticBody" to="CursorLayer" method="_on_hover" binds= [ "yoshiko1", "Yoshiko Tsushima" ]]
[connection signal="mouse_exited" from="3D/Yoshiko3D/StaticBody" to="CursorLayer" method="_off_hover" binds= [ "yoshiko1", "Yoshiko Tsushima" ]]
